styling tittle and description

--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
 
 <body class="bg-gray-100 py-14">
     <div class="container m-auto">
-        <div class="">
-            <h1>MTARGET Is More Than Just Software</h1>
-            <p>""Whether you wanted to start small or jump right in with the
-                latest technology of integrated cross-channel personalized
-                marketing. We will help you to tailor the software &
-                strategies to bring the highest ROI for your campaign.""</p>
+        <div class="pt-10 px-96">
+            <h1 class="text-center text-4xl text-yellow-500 font-bold">MTARGET Is More Than Just Software</h1>
+            <p class="mt-10 text-center text-lg text-gray-600 font-semibold">"Whether you wanted to start small or jump
+                right in with the latest technology of integrated cross-channel personalized marketing. We will help you
+                to tailor the software & strategies to bring the highest ROI for your campaign."</p>
         </div>
     </div>
 
