add style for responsive

--- a/index.html
+++ b/index.html
@@ -1,24 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles/tailwind.css" />
-    <title>MTARGET Pricing</title>
-</head>
-
-<body class="bg-gray-100 py-14">
-    <div class="container m-auto">
-        <div class="pt-10 px-96">
-            <h1 class="text-center text-4xl text-yellow-500 font-bold">MTARGET Is More Than Just Software</h1>
-            <p class="mt-10 text-center text-lg text-gray-600 font-semibold">"Whether you wanted to start small or jump
-                right in with the latest technology of integrated cross-channel personalized marketing. We will help you
-                to tailor the software & strategies to bring the highest ROI for your campaign."</p>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="./styles/tailwind.css" />
+        <title>MTARGET Pricing</title>
+    </head>
+    <body class="bg-gray-100 py-14">
+        <div>
+            <div
+                class="pt-10 px-0 sm:px-10 md:px-20 lg:px-56 xl:px-72 2xl:px-96"
+            >
+                <h1
+                    class="
+                        text-center text-2xl text-yellow-500
+                        sm:text-3xl
+                        md:text-4xl
+                        font-bold
+                    "
+                >
+                    MTARGET Is More Than Just A Software
+                </h1>
+                <p
+                    class="
+                        mt-10
+                        text-center text-gray-600
+                        sm:text-lg
+                        md:text-xl
+                        font-semibold
+                    "
+                >
+                    "Whether you wanted to start small or jump right in with the
+                    latest technology of integrated cross-channel personalized
+                    marketing. We will help you to tailor the software &
+                    strategies to bring the highest ROI for your campaign."
+                </p>
+            </div>
         </div>
-    </div>
-
-</body>
-
+    </body>
 </html>
