--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
         <title>MTARGET Pricing</title>
     </head>
     <body class="bg-gray-100 py-14">
-        <div>
+        <!-- Title and Description -->
+        <div class="container m-0 sm:m-auto space-y-10 md:space-y-20">
             <div
                 class="pt-10 px-0 sm:px-10 md:px-20 lg:px-56 xl:px-72 2xl:px-96"
             >
@@ -37,6 +38,265 @@
                     strategies to bring the highest ROI for your campaign."
                 </p>
             </div>
+            <!-- End Title and Description -->
+
+            <!-- Marketing Channel -->
+            <div>
+                <h1
+                    class="
+                        block
+                        md:hidden
+                        font-bold
+                        text-2xl
+                        sm:text-3xl
+                        text-center text-gray-600
+                        mb-10
+                    "
+                >
+                    Marketing Channel
+                </h1>
+                <div class="flex">
+                    <div
+                        class="
+                            w-2/4
+                            sm:w-2/5
+                            md:w-1/3
+                            flex flex-col
+                            justify-center
+                            text-center
+                        "
+                    >
+                        <h1
+                            class="
+                                font-bold
+                                hidden
+                                md:block md:text-3xl
+                                lg:text-4xl
+                                text-gray-600
+                            "
+                        >
+                            Marketing Channel
+                        </h1>
+                    </div>
+                    <div
+                        class="
+                            mx-2
+                            bg-opacity-75
+                            w-1/3
+                            h-16
+                            md:h-44
+                            bg-cover
+                            flex-1 flex-col
+                            text-white text-center
+                            rounded-t-2xl
+                            shadow-2xl
+                            overflow-hidden
+                            relative
+                        "
+                    >
+                        <img
+                            class="
+                                inset-0
+                                h-full
+                                w-full
+                                object-cover object-top
+                                hidden
+                                md:block
+                            "
+                            src="./images/image-profesional.jpg"
+                            alt=""
+                            srcset=""
+                        />
+                        <div class="absolute inset-0 bg-gray-900 bg-opacity-80">
+                            <h2
+                                class="
+                                    hidden
+                                    md:block
+                                    mt-5
+                                    text-xl
+                                    lg:text-3xl
+                                    font-bold
+                                    tracking-wider
+                                "
+                            >
+                                Professional
+                            </h2>
+                            <h2 class="block md:hidden mt-3 text-2xl font-bold">
+                                P
+                            </h2>
+                            <p class="mt-2 tracking-wide hidden md:block">
+                                The perfect spot to start
+                            </p>
+                            <div class="hidden md:block">
+                                <button
+                                    class="
+                                        md:mt-1
+                                        lg:mt-3
+                                        md:px-5
+                                        lg:px-10
+                                        md:py-1
+                                        lg:py-1.5
+                                        bg-gray-200 bg-opacity-50
+                                        rounded
+                                        border border-gray-50
+                                        font-semibold
+                                        hover:bg-white hover:text-gray-600
+                                    "
+                                >
+                                    Get Started
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div
+                        class="
+                            mx-2
+                            bg-opacity-75
+                            w-1/3
+                            h-16
+                            md:h-44
+                            bg-cover
+                            flex-1 flex-col
+                            text-white text-center
+                            rounded-t-2xl
+                            shadow-2xl
+                            overflow-hidden
+                            relative
+                        "
+                    >
+                        <img
+                            class="
+                                inset-0
+                                h-full
+                                w-full
+                                object-cover object-top
+                                hidden
+                                md:block
+                            "
+                            src="./images/image-business.jpg"
+                            alt=""
+                            srcset=""
+                        />
+                        <div
+                            class="absolute inset-0 bg-purple-900 bg-opacity-80"
+                        >
+                            <h2
+                                class="
+                                    hidden
+                                    md:block
+                                    mt-5
+                                    text-xl
+                                    lg:text-3xl
+                                    font-bold
+                                    tracking-wider
+                                "
+                            >
+                                Business
+                            </h2>
+                            <h2 class="block md:hidden mt-3 text-2xl font-bold">
+                                B
+                            </h2>
+                            <p class="mt-2 tracking-wide hidden md:block">
+                                Essential to level up your marketing
+                            </p>
+                            <div class="hidden md:block">
+                                <button
+                                    class="
+                                        md:mt-1
+                                        lg:mt-3
+                                        md:px-5
+                                        lg:px-10
+                                        md:py-1
+                                        lg:py-1.5
+                                        bg-gray-200 bg-opacity-50
+                                        rounded
+                                        border border-gray-50
+                                        font-semibold
+                                        hover:bg-white hover:text-gray-600
+                                    "
+                                >
+                                    Talk With Us
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div
+                        class="
+                            mx-2
+                            bg-opacity-75
+                            w-1/3
+                            h-16
+                            md:h-44
+                            bg-cover
+                            flex-1 flex-col
+                            text-white text-center
+                            rounded-t-2xl
+                            shadow-2xl
+                            overflow-hidden
+                            relative
+                        "
+                    >
+                        <img
+                            class="
+                                inset-0
+                                h-full
+                                w-full
+                                object-cover object-top
+                                hidden
+                                md:block
+                            "
+                            src="./images/image-enterprise.jpg"
+                            alt=""
+                            srcset=""
+                        />
+                        <div
+                            class="absolute inset-0 bg-yellow-500 bg-opacity-80"
+                        >
+                            <h2
+                                class="
+                                    hidden
+                                    md:block
+                                    mt-5
+                                    text-xl
+                                    lg:text-3xl
+                                    font-bold
+                                    tracking-wider
+                                "
+                            >
+                                Enterprise
+                            </h2>
+                            <h2 class="block md:hidden mt-3 text-2xl font-bold">
+                                E
+                            </h2>
+                            <p class="mt-2 tracking-wide hidden md:block">
+                                Ideal for customer centric brands
+                            </p>
+                            <div class="hidden md:block">
+                                <button
+                                    class="
+                                        md:mt-1
+                                        lg:mt-3
+                                        md:px-5
+                                        lg:px-10
+                                        md:py-1
+                                        lg:py-1.5
+                                        bg-gray-200 bg-opacity-50
+                                        rounded
+                                        border border-gray-50
+                                        font-semibold
+                                        hover:bg-white hover:text-gray-600
+                                    "
+                                >
+                                    Request Demo
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- End Marketing Channel -->
         </div>
     </body>
 </html>
