add section talk with us and make it responsive

--- a/index.html
+++ b/index.html
@@ -297,6 +297,95 @@
                 </div>
             </div>
             <!-- End Marketing Channel -->
+
+            <!-- Talk With Us -->
+            <div class="px-20 md:px-0 pt-10">
+                <h1
+                    class="
+                        text-center text-2xl
+                        sm:text-3xl
+                        md:text-4xl
+                        text-gray-600
+                        font-bold
+                    "
+                >
+                    Let's Hear What We Can Do For You
+                </h1>
+                <div class="mt-10">
+                    <div class="flex flex-col md:flex-row justify-between">
+                        <input
+                            class="
+                                h-14
+                                rounded-md
+                                w-full
+                                text-center
+                                border-2 border-gray-200
+                                focus:outline-none
+                                focus:border-2
+                                focus:border-yellow-500
+                            "
+                            type="text"
+                            name=""
+                            id="fullname"
+                            placeholder="Full Name"
+                        />
+                        <input
+                            class="
+                                my-2
+                                md:my-0 md:mx-2
+                                h-14
+                                rounded-md
+                                w-full
+                                text-center
+                                border-2 border-gray-200
+                                focus:outline-none
+                                focus:border-2
+                                focus:border-yellow-500
+                            "
+                            type="email"
+                            name=""
+                            id="email"
+                            placeholder="Email Address"
+                        />
+                        <input
+                            class="
+                                h-14
+                                rounded-md
+                                w-full
+                                text-center
+                                border-2 border-gray-200
+                                focus:outline-none
+                                focus:border-2
+                                focus:border-yellow-500
+                            "
+                            type="number"
+                            name=""
+                            id="telp"
+                            placeholder="+62"
+                        />
+                    </div>
+                    <div class="flex justify-center mt-10">
+                        <button
+                            class="
+                                px-7
+                                py-3
+                                bg-yellow-500
+                                rounded-md
+                                uppercase
+                                text-white
+                                font-semibold
+                                tracking-wider
+                                hover:bg-yellow-600
+                                text-xs
+                                sm:text-sm
+                            "
+                        >
+                            talk to an expert
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <!-- Talk With Us -->
         </div>
     </body>
 </html>
