add section shophisticted features make it responsive

--- a/index.html
+++ b/index.html
@@ -386,6 +386,313 @@
                 </div>
             </div>
             <!-- Talk With Us -->
+
+            <!-- Shophisticted Features -->
+            <div>
+                <h1
+                    class="
+                        text-center text-2xl
+                        sm:text-3xl
+                        md:text-4xl
+                        text-gray-600
+                        font-bold
+                        px-16
+                        md:px-0
+                        mt-20
+                    "
+                >
+                    Shophisticted Features For You and Your Customers
+                </h1>
+                <p
+                    class="
+                        mt-5
+                        text-center text-lg
+                        md:text-xl
+                        text-gray-600
+                        font-semibold
+                        px-20
+                        md:px-0
+                    "
+                >
+                    We make it possible for you to understand your customers
+                    better through data.
+                </p>
+
+                <div class="flex mt-10">
+                    <div class="w-full md:w-1/2 flex justify-center">
+                        <h2
+                            class="
+                                py-2
+                                md:py-4
+                                px-10
+                                bg-yellow-500
+                                rounded-t-xl
+                                text-lg
+                                md:text-xl
+                                font-bold
+                                text-white
+                                tracking-wider
+                                shadow-2xl
+                            "
+                        >
+                            Made for Marketers
+                        </h2>
+                    </div>
+                    <div class="w-1/2 md:flex justify-center hidden">
+                        <h2
+                            class="
+                                py-2
+                                md:py-4
+                                px-10
+                                bg-purple-800
+                                rounded-t-xl
+                                text-lg
+                                md:text-xl
+                                font-bold
+                                text-white
+                                tracking-wider
+                                shadow-2xl
+                            "
+                        >
+                            Made for Developer
+                        </h2>
+                    </div>
+                </div>
+
+                <div
+                    class="
+                        md:flex
+                        bg-transparent
+                        md:bg-white
+                        rounded-2xl
+                        shadow-none
+                        md:shadow-2xl
+                        devide-nome
+                        md:divide-x-2
+                        divide-gray-200
+                        mb-10
+                        py-10
+                        relative
+                    "
+                >
+                    <div
+                        class="
+                            -mt-10
+                            md:mt-0
+                            pb-6
+                            md:pb-0
+                            bg-white
+                            rounded-2xl
+                            md:rounded-none
+                            shadow-2xl
+                            md:shadow-none
+                            w-full
+                            md:w-1/2
+                        "
+                    >
+                        <div class="flex flex-wrap justify-center">
+                            <div class="h-2/3">
+                                <img
+                                    src="/images/flow.png"
+                                    alt="..."
+                                    class="
+                                        max-w-full
+                                        h-auto
+                                        align-middle
+                                        border-none
+                                    "
+                                />
+                            </div>
+                        </div>
+                        <div class="px-10 sm:px-20 md:px-10 lg:px-20 mt-3">
+                            <h2 class="py-5 text-2xl text-gray-600 font-bold">
+                                Flow
+                            </h2>
+                            <p class="font-semibold text-gray-500 text-normal">
+                                Flow will make it possible for you to build a
+                                seamless automated cross channel customer
+                                experience, leading towards operational
+                                efficiency and revenue growth.
+                            </p>
+                            <button
+                                class="
+                                    my-5
+                                    py-2
+                                    px-12
+                                    font-medium
+                                    text-normal text-yellow-500
+                                    border border-yellow-500
+                                    rounded
+                                    hover:bg-yellow-500
+                                    hover:border-yellow-500
+                                    hover:text-white
+                                "
+                            >
+                                Learn more
+                            </button>
+                        </div>
+                        <div class="flex flex-wrap justify-center">
+                            <div class="h-2/3">
+                                <img
+                                    src="/images/persona.png"
+                                    alt="..."
+                                    class="
+                                        max-w-full
+                                        h-auto
+                                        align-middle
+                                        border-none
+                                    "
+                                />
+                            </div>
+                        </div>
+                        <div class="px-10 sm:px-20 md:px-10 lg:px-20 mt-3">
+                            <h2 class="py-5 text-2xl text-gray-600 font-bold">
+                                Persona
+                            </h2>
+                            <p class="font-semibold text-gray-500 text-normal">
+                                Get to know your customers like never before.
+                                You are able to know who is ready for purchase
+                                or has started to slip away. This is beyond what
+                                works and what’s not.
+                            </p>
+                            <button
+                                class="
+                                    my-5
+                                    py-2
+                                    px-12
+                                    font-medium
+                                    text-normal text-yellow-500
+                                    border border-yellow-500
+                                    rounded
+                                    hover:bg-yellow-500
+                                    hover:border-yellow-500
+                                    hover:text-white
+                                "
+                            >
+                                Request demo
+                            </button>
+                        </div>
+                    </div>
+
+                    <div class="flex justify-center mt-16 block md:hidden">
+                        <h2
+                            class="
+                                py-2
+                                md:py-4
+                                px-10
+                                bg-purple-700
+                                rounded-t-xl
+                                text-lg
+                                font-bold
+                                md:text-xl
+                                text-white
+                                tracking-wider
+                                shadow-2xl
+                            "
+                        >
+                            Made for Developers
+                        </h2>
+                    </div>
+
+                    <div
+                        class="
+                            pb-6
+                            md:pb-0
+                            bg-white
+                            rounded-2xl
+                            md:rounded-none
+                            shadow-2xl
+                            md:shadow-none
+                            w-full
+                            md:w-1/2
+                        "
+                    >
+                        <div class="flex flex-wrap justify-center">
+                            <div class="h-2/3">
+                                <img
+                                    src="/images/e-billing.png"
+                                    alt="..."
+                                    class="
+                                        max-w-full
+                                        h-auto
+                                        align-middle
+                                        border-none
+                                    "
+                                />
+                            </div>
+                        </div>
+                        <div class="px-10 sm:px-20 md:px-10 lg:px-20 mt-3">
+                            <h2 class="py-5 text-2xl text-gray-600 font-bold">
+                                E-Billing
+                            </h2>
+                            <p class="font-semibold text-gray-500 text-normal">
+                                No more hassle to comply with the Government’s
+                                online transaction regulations. Ebilling will
+                                help you to generate and provide transaction
+                                bills automatically.
+                            </p>
+                            <button
+                                class="
+                                    my-5
+                                    py-2
+                                    px-12
+                                    font-medium
+                                    text-normal text-yellow-500
+                                    border border-yellow-500
+                                    rounded
+                                    hover:bg-yellow-500
+                                    hover:border-yellow-500
+                                    hover:text-white
+                                "
+                            >
+                                Talk with us
+                            </button>
+                        </div>
+                        <div class="flex flex-wrap justify-center">
+                            <div class="h-2/3">
+                                <img
+                                    src="/images/smart-otp.png"
+                                    alt="..."
+                                    class="
+                                        max-w-full
+                                        h-auto
+                                        align-middle
+                                        border-none
+                                    "
+                                />
+                            </div>
+                        </div>
+                        <div class="px-10 sm:px-20 md:px-10 lg:px-20 mt-3">
+                            <h2 class="py-5 text-2xl text-gray-600 font-bold">
+                                Smart OTP
+                            </h2>
+                            <p class="font-semibold text-gray-500 text-normal">
+                                Security is not something to mess around. With
+                                the latest technology, Smart OTP can be used for
+                                purposes like authentication and passwordless
+                                login.
+                            </p>
+                            <button
+                                class="
+                                    my-5
+                                    py-2
+                                    px-12
+                                    font-medium
+                                    text-normal text-yellow-500
+                                    border border-yellow-500
+                                    rounded
+                                    hover:bg-yellow-500
+                                    hover:border-yellow-500
+                                    hover:text-white
+                                "
+                            >
+                                Give it a try
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- End Shophisticted Features -->
         </div>
     </body>
 </html>
