--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
                         <div class="flex flex-wrap justify-center">
                             <div class="h-2/3">
                                 <img
-                                    src="/images/flow.png"
+                                    src="./images/flow.png"
                                     alt="..."
                                     class="
                                         max-w-full
@@ -534,7 +534,7 @@
                         <div class="flex flex-wrap justify-center">
                             <div class="h-2/3">
                                 <img
-                                    src="/images/persona.png"
+                                    src="./images/persona.png"
                                     alt="..."
                                     class="
                                         max-w-full
@@ -610,7 +610,7 @@
                         <div class="flex flex-wrap justify-center">
                             <div class="h-2/3">
                                 <img
-                                    src="/images/e-billing.png"
+                                    src="./images/e-billing.png"
                                     alt="..."
                                     class="
                                         max-w-full
@@ -651,7 +651,7 @@
                         <div class="flex flex-wrap justify-center">
                             <div class="h-2/3">
                                 <img
-                                    src="/images/smart-otp.png"
+                                    src="./images/smart-otp.png"
                                     alt="..."
                                     class="
                                         max-w-full
