--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                 hidden
                                 md:block
                             "
-                            src="/images/image-profesional.jpg"
+                            src="./images/image-profesional.jpg"
                             alt=""
                             srcset=""
                         />
@@ -180,7 +180,7 @@
                                 hidden
                                 md:block
                             "
-                            src="/images/image-business.jpg"
+                            src="./images/image-business.jpg"
                             alt=""
                             srcset=""
                         />
@@ -253,7 +253,7 @@
                                 hidden
                                 md:block
                             "
-                            src="/images/image-enterprise.jpg"
+                            src="./images/image-enterprise.jpg"
                             alt=""
                             srcset=""
                         />
