--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                                         rounded
                                         border border-gray-50
                                         font-semibold
-                                        hover:bg-white hover:text-gray-600
+                                        hover:bg-white hover:text-purple-800
                                     "
                                 >
                                     Talk With Us
@@ -292,7 +292,7 @@
                                         rounded
                                         border border-gray-50
                                         font-semibold
-                                        hover:bg-white hover:text-gray-600
+                                        hover:bg-white hover:text-yellow-500
                                     "
                                 >
                                     Request Demo
